<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hello Data</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="pic_of_data">Pic of Data</string>
    <string name="butHello_string">Поздороваться</string>
    <string name="Hello_Data">Hello Data</string>
    <string name="Hello_Data2">Hello Data2</string>
    <string name="butCrowsCounter_string">Считаем ворон</string>
    <string name="butCatsCounter_string">Считаем котов</string>
    <string name="butRed_string">Красный</string>
    <string name="butYellow_string">Жёлтый</string>
    <string name="butGreen_string">Зелёный</string>
    <string name="unpressed">Нажатий не было</string>
    <string name="about_text">У Лукоморья дуб зелёный;\n
        					Злотая цепь на дубе том:\n
        					И днём и ночью <b>кот учёный</b>\n
        					Всё ходит по цепи кругом;\n
        					Идёт <b>направо</b> - песнь заводит\n<b>Налево</b> - сказку говорит.</string>
    <string name="about_title">О программе</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="title_activity_demo">Демо</string>
    <string name="title_activity_privet">Привет</string>
    <string name="to_whom">Кому:</string>
    <string name="description">Описание:</string>
    <string name="send">Передать:</string>
    <string name="who">Кто:</string>
    

</resources>
