<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_whom" />
        <EditText
        	android:id="@+id/editText_toWhom"
        	android:inputType="text"
        	android:layout_width="match_parent"
        	android:layout_height="match_parent"
        	android:ems="10" >

        <requestFocus />
    	</EditText>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description" />
        <EditText
        	android:id="@+id/editText_description"
        	android:inputType="text"
        	android:layout_width="match_parent"
        	android:layout_height="match_parent"
        	android:ems="10" >        
    	</EditText>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/who" />
        <EditText
        	android:id="@+id/editText_who"
        	android:inputType="text"
        	android:layout_width="match_parent"
        	android:layout_height="match_parent"
        	android:ems="10" >        
    	</EditText>
        
        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/send" />
        
    </LinearLayout>


</ScrollView>
